<resources>
    <string name="app_name">Studnetz</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!-- sign in and -up -->
    <string name ="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_signup_info">Don\'t have an account?\n<b><font color="#008577">SIGN UP NOW</font></b></string>
    <string name="register_signin_info">Already have an account?\n<b><font color="#008577">SIGN IN NOW</font></b></string>

    <string name="register_subtitle">create an account</string>

    <string name="email_hint">Insert your email</string>

    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>

    <string name="signup">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="firstname_hint">First name</string>
    <string name="lastname_hint">Last name</string>
    <string name="passwordconf_hint">Confirm Password</string>
    <string name="password_hint">Password</string>
    <string name="schoolsignin">School sign in</string>

    <!-- profile -->
    <string name="description">Description</string>
    <string name="reviews">Reviews</string>
    <string name="calendar">Calendar</string>
    <string name="clientprofile" />

    <!-- Toolbar titles -->
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_groups">Groups</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>


    <string name="lorem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>

    <!-- Error messages -->


    <string name="default_unknown_error">Something went wrong\nPlease try again later</string>
    <string name="db_connection_error">Something went wrong\nPlease try again later</string>

    <string name="input_field_empty_error">Please fill the required fields</string>

    <string name="valid_email_error">That is not a valid email address</string>
    <string name="email_taken_error">This email address has been taken</string>
    <string name="password_match_error">Passwords do not match</string>

    <!-- Stolen from Instagram, maybe change-->
    <string name="password_to_short_error">Password must be at least %d characters</string>
    <string name="common_password_error">That is a common password. Try something that is harder to guess.</string>

    <string name="login_wrong_input">You have entered an invalid username or password</string>

</resources>
