<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_register_name_error"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="bottom"
        android:textAlignment="center"
        android:textColor="@color/colorErrorRed"
        android:textSize="@dimen/normal_font_size"
        />

    <EditText
        android:id="@+id/edittext_register_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_view"
        android:background="@drawable/basic_text_input"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="@dimen/input_font_size"
        android:textAlignment="textStart"
        android:inputType="textPersonName"
        android:maxLength="255"
        android:hint="@string/firstname_hint"/>

    <EditText
        android:id="@+id/edittext_register_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_view"
        android:background="@drawable/basic_text_input"
        android:hint="@string/lastname_hint"
        android:inputType="textPersonName"
        android:maxLength="255"
        android:textAlignment="textStart"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="@dimen/input_font_size" />

    <Button
        android:id="@+id/button_register_name_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_view"
        android:background="@drawable/basic_rounded_button"
        android:enabled="false"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/normal_button_font_size" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/margin_view"/>


</LinearLayout>
